sumo/tests/sumo/errors/meandata_edges_missing_begin_divider/errors.sumo.exe
Error: While processing option 'dump-begins':
 Empty element occured in 0;
